Closed
Bug 414018
Opened 17 years ago
Closed 17 years ago
crash when pressing shift-tab after using FAYT
Categories
(Toolkit :: Find Toolbar, defect, P1)
Toolkit
Find Toolbar
Tracking
()
VERIFIED
FIXED
mozilla1.9beta3
People
(Reporter: ori, Assigned: MatsPalmgren_bugz)
References
Details
(Keywords: crash, regression, testcase)
Attachments
(3 files)
|
633 bytes,
text/html
|
Details | |
|
8.19 KB,
text/plain
|
Details | |
|
2.16 KB,
patch
|
neil
:
review+
roc
:
superreview+
beltzner
:
approval1.9b3+
roc
:
approval1.9+
|
Details | Diff | Splinter Review |
Using Firefox 3 nightly build.
When invoking FAYT and pressing shift-tab to move the focus backwards in the document, the focus moves to the navigation toolbar.
After invoking FAYT again, Firefox crashes.
The attached test-case has instructions to reproduce the crash.
Stack trace: http://pastebin.mozilla.org/311697
| Reporter | ||
Comment 1•17 years ago
|
||
Attaching the stack trace linked from the pastebin.
Comment 2•17 years ago
|
||
WFM with Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9b3pre) Gecko/2008012504 Minefield/3.0b3pre ID:2008012504
Comment 3•17 years ago
|
||
Another testcase:
1. Load an empty page, like data:text/html,
2. Press / or ' to trigger FAYT
3. Press shift-tab
4. Press / or ' -> it crashes
5. If you weren't quick enough, the find toolbar may have closed between step 3 and 4. You can now type any key to make it crash.
Regression range:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=PhoenixTinderbox&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2007-11-27+04%3A00%3A00&maxdate=2007-11-28+17%3A00%3A00&cvsroot=%2Fcvsroot
I'm not sure what is to blame in this range.
This also crashes on Windows:
http://crash-stats.mozilla.com/report/index/fdc21c00-cc3c-11dc-b629-001a4bd46e84
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: blocking-firefox3?
OS: Linux → All
Hardware: PC → All
Version: unspecified → Trunk
| Assignee | ||
Comment 4•17 years ago
|
||
Backing out bug 143065 seems to fix this (it's in the regression range above).
Blocks: 143065
Severity: major → critical
| Assignee | ||
Comment 5•17 years ago
|
||
FWIW, this fixes it for me...
Comment 6•17 years ago
|
||
Sorry, that change was actually for bug 399427; I do normally manage to keep my patches separate but I must have overlooked it in that case. Feel free to arrange a backout of that erroneously checked-in patch.
FYI I was eventually able to reproduce the crash with SeaMonkey FAYT; the bug still remains that Find crashes if its ranges point at documents which otherwise would appear to be legal range endpoints.
| Assignee | ||
Updated•17 years ago
|
Attachment #299500 -
Flags: superreview?(roc)
Attachment #299500 -
Flags: review?(neil)
| Assignee | ||
Comment 7•17 years ago
|
||
Let's back out for now and leave it for bug 399427.
Will you file a separate bug on fixing the document as range point crash?
Updated•17 years ago
|
Attachment #299500 -
Flags: review?(neil) → review+
Comment 8•17 years ago
|
||
(In reply to comment #7)
>Will you file a separate bug on fixing the document as range point crash?
Filed bug 414338.
Attachment #299500 -
Flags: superreview?(roc)
Attachment #299500 -
Flags: superreview+
Attachment #299500 -
Flags: approval1.9+
Comment 9•17 years ago
|
||
Comment on attachment 299500 [details] [diff] [review]
Revert the change to MoveCaretToFocus() from bug 143065
Fixes an easily reproducible crash.
Attachment #299500 -
Flags: approval1.9b3?
| Assignee | ||
Updated•17 years ago
|
Assignee: nobody → mats.palmgren
Updated•17 years ago
|
Flags: blocking-firefox3? → blocking-firefox3+
Priority: -- → P1
Target Milestone: --- → Firefox 3 beta4
Comment 10•17 years ago
|
||
Comment on attachment 299500 [details] [diff] [review]
Revert the change to MoveCaretToFocus() from bug 143065
a=beltzner for beta 3
Attachment #299500 -
Flags: approval1.9b3? → approval1.9b3+
Comment 11•17 years ago
|
||
Checking in content/events/src/nsEventStateManager.cpp;
/cvsroot/mozilla/content/events/src/nsEventStateManager.cpp,v <-- nsEventStateManager.cpp
new revision: 1.728; previous revision: 1.727
done
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: Firefox 3 beta4 → Firefox 3 beta3
Updated•17 years ago
|
Flags: in-testsuite?
Comment 12•17 years ago
|
||
Verified fix on Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b3) Gecko/2008020514 Firefox/3.0b3 and
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9b3) Gecko/2008020418 Firefox/3.0b3
Status: RESOLVED → VERIFIED
Updated•17 years ago
|
Product: Firefox → Toolkit
You need to log in
before you can comment on or make changes to this bug.
Description
•