Bug 414018 - "crash when pressing shift-tab after using FAYT" [p=mats.palmgren@bredband.net (Mats Palmgren) r=Neil sr+a1.9=roc a1.9b3=beltzner]